# telegram-llm-bot

./: .dockerignore  .env.example  .gitignore  DATABASE.md  DELIVERY_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  OLLAMA_SETUP.md  README.dev.md  README.md  create_tables.sql  docker-compose.yml  pyproject.toml  requirements.txt  setup-ollama.sh
app/: config.py  main.py
app/bot/: __init__.py  handlers.py  webhook.py
app/db/: __init__.py  repository.py  session.py
app/models/: __init__.py  schemas.py
app/services/: appointment.py  llm.py  local_llm.py
